--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Кнопки с чудесами</title>
-	<link rel="stylesheet/less" type="text/css" href="/assets-g/css/normalize.less" />
-	<link rel="stylesheet/less" type="text/css" href="style.css" />
+<title>RippleCator - make ripples everywhere</title>
+	<link rel="stylesheet/css" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" />
+	<link rel="stylesheet/css" type="text/css" href="style.css" />
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>
     
